[package]
name = "ecdsa_example"
version = "0.1.0"
authors = ["paul@thev.net"]
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1"
candid = "0.7.10"
libsecp256k1 = "0.5.0"

ic-types = { git = "https://github.com/dfinity/ic", rev = "d004accc3904e24dddb13a11d93451523e1a8a5f" }
ic-ic00-types = { git = "https://github.com/dfinity/ic", rev = "d004accc3904e24dddb13a11d93451523e1a8a5f" }
dfn_candid = { git = "https://github.com/dfinity/ic", rev = "d004accc3904e24dddb13a11d93451523e1a8a5f" }
dfn_core = { git = "https://github.com/dfinity/ic", rev = "d004accc3904e24dddb13a11d93451523e1a8a5f" }
