[package]
name = "ecdsa_example"
version = "0.1.0"
authors = ["paul@thev.net"]
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1"
candid = "0.7.4"
libsecp256k1 = "0.5.0"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
ic-ic00-types =  { git = "https://github.com/dfinity/ic", rev = "42f82abdd83cd5d5c7f509c6633afd417d1dd581" }
