[package]
name = "ecdsa_example"
version = "0.1.0"
authors = ["paul@thev.net"]
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1"
candid = "0.7.4"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
getrandom = { version = "0.2", features = ["custom"] }
k256 = { version = "0.10", default-features = false, features = [ "ecdsa", "sha256" ] }
